- Migrate tests to JUnit 5. - Migrate to Java 18. - Add new simple problem (IsNumberEven.pushgp). - Cleanup.